# cognitive-mirror

./: README.md  app.json  manifest.json  package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts
bundle/: app.js  index.html  style.css
executas/coherence-engine/: README.md  coherence_engine.py  executa.json  pyproject.toml
scripts/: bootstrap.sh  deploy.sh  set-tool-id.py
skills/cognitive-coach/: SKILL.md
tests/: test_coherence_engine.py
