[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-CHANGEME-coherence-engine-CHANGEME"
version = "1.0.0"
description = "5-plane cognitive coherence engine for Cognitive Mirror Anna App"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cognitive Mirror Team"}
]
keywords = ["anna", "cognitive", "coherence", "behavioral-oracle", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
tool-CHANGEME-coherence-engine-CHANGEME = "coherence_engine:main"

[project.urls]
Homepage = "https://github.com/dev-analyshd/cognitive-mirror"
Repository = "https://github.com/dev-analyshd/cognitive-mirror"

[tool.hatch.build.targets.wheel]
packages = ["."]
